# QuickInput

./: .gitignore  CHANGELOG.md  QuickInput.spec  README.md  build.bat  build_installer.bat  main.py  pyproject.toml  requirements.txt
design/: quickinput-elegant-ui.html  quickinput-ui-spec.md
installer/: QuickInput.iss
quickinput/: __init__.py  app.py  appearance.py  clipboard_service.py  hotkey_config.py  hotkey_win.py  i18n.py  logging_setup.py  main.py  paths.py  phrase_manager.py  phrase_store.py  popup.py  qt_bootstrap.py  settings.py  settings_dialog.py  single_instance.py  tray.py
tests/: test_clipboard_service.py  test_hotkey_config.py  test_paths.py  test_phrase_manager.py  test_phrase_store.py  test_popup.py  test_settings.py  test_settings_dialog.py  test_tray.py
