[project]
name = "quickinput"
version = "1.0.1"
description = "Windows tray quick text input tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.7.3",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
test = []

[tool.pytest.ini_options]
testpaths = ["tests"]
